feat(admin) : dtos updated to record